// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`projectsReducer Adds a new project correctly 1`] = `
Object {
  "ids": Array [
    "project-1",
    "project-2",
  ],
  "meta": Object {
    "activeProject": "project-2",
  },
  "project-1": Object {
    "createdDate": "01-01-2021",
    "description": null,
    "experiments": Array [],
    "lastAnalyzed": null,
    "lastModified": "01-01-2021",
    "name": "test project",
    "samples": Array [],
    "uuid": "project-1",
  },
  "project-2": Object {
    "createdDate": "01-01-2021",
    "description": "This is another test description :)",
    "experiments": Array [],
    "lastAnalyzed": null,
    "lastModified": "01-01-2021",
    "name": "test project 2",
    "samples": Array [],
    "uuid": "project-2",
  },
}
`;

exports[`projectsReducer Deletes projects correctly 1`] = `
Object {
  "ids": Array [
    "project-1",
  ],
  "meta": Object {
    "activeProject": "project-2",
  },
  "project-1": Object {
    "createdDate": "01-01-2021",
    "description": null,
    "experiments": Array [],
    "lastAnalyzed": null,
    "lastModified": "01-01-2021",
    "name": "test project",
    "samples": Array [],
    "uuid": "project-1",
  },
}
`;

exports[`projectsReducer Inserts a new project correctly 1`] = `
Object {
  "ids": Array [
    "project-1",
  ],
  "meta": Object {
    "activeProject": "project-1",
  },
  "project-1": Object {
    "createdDate": "01-01-2021",
    "description": null,
    "experiments": Array [],
    "lastAnalyzed": null,
    "lastModified": "01-01-2021",
    "name": "test project",
    "samples": Array [],
    "uuid": "project-1",
  },
}
`;

exports[`projectsReducer Sets an active project correctly 1`] = `
Object {
  "ids": Array [
    "project-1",
    "project-2",
  ],
  "meta": Object {
    "activeProject": "project-2",
  },
  "project-1": Object {
    "createdDate": "01-01-2021",
    "description": null,
    "experiments": Array [],
    "lastAnalyzed": null,
    "lastModified": "01-01-2021",
    "name": "test project",
    "samples": Array [],
    "uuid": "project-1",
  },
  "project-2": Object {
    "createdDate": "01-01-2021",
    "description": "This is another test description :)",
    "experiments": Array [],
    "lastAnalyzed": null,
    "lastModified": "01-01-2021",
    "name": "test project 2",
    "samples": Array [],
    "uuid": "project-2",
  },
}
`;

exports[`projectsReducer Updates a project correctly 1`] = `
Object {
  "ids": Array [
    "project-1",
  ],
  "meta": Object {
    "activeProject": "project-1",
  },
  "project-1": Object {
    "createdDate": "01-01-2021",
    "description": null,
    "experiments": Array [],
    "lastAnalyzed": null,
    "lastModified": "02-01-2021",
    "name": "updated name",
    "samples": Array [],
    "uuid": "project-1",
  },
}
`;
